<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify_textView"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textSize="25sp"
        android:textColor="#40E847"
        android:gravity="center">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:startIconDrawable="@drawable/ic_baseline_search_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/spotify_search_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/spotify_searchBox" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/spotify_search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify_Button"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/spotify_search_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>